--- a/app/src/main/res/values/new_account.xml
+++ b/app/src/main/res/values/new_account.xml
@@ -14,4 +14,7 @@
     <string name="no_child_space_permission">%s has no permission to create child room in the management space. Please grant it first.</string>
     <string name="logged_in">Logged in as %s</string>
     <string name="cannot_join_message_space">Failed to join messaging space. If the room is not public, you must send invitation to this account prior to adding account here.</string>
+    <string name="failed_to_find_room_permission_settings">Failed to find room permission settings.</string>
+    <string name="cannot_create_child_room">"Cannot create child room: "</string>
+    <string name="cannot_create_room_in_the_messaging_space">"Cannot create room in the messaging space: "</string>
 </resources>
