--- a/app/src/main/res/values/logs.xml
+++ b/app/src/main/res/values/logs.xml
@@ -6,4 +6,5 @@
     <string name="known_account_id">Message forwarded using account "%s".</string>
     <string name="success">Success</string>
     <string name="failure">Failure</string>
+    <string name="hide_successful_sends">Hide successful sends</string>
 </resources>
