--- a/app/src/main/res/values/logs.xml
+++ b/app/src/main/res/values/logs.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="logs">Logs</string>
     <string name="logging_disabled_alert">Logging feature is currently disabled. You can enable this in the settings.</string>
+    <string name="not_forwarded">Message not forwarded</string>
     <string name="unknown_account_id">Message forwarded using unknown account of ID %s</string>
     <string name="known_account_id">Message forwarded using account "%s".</string>
     <string name="success">Success</string>
