--- a/app/src/main/res/values/logs.xml
+++ b/app/src/main/res/values/logs.xml
@@ -2,10 +2,15 @@
 <resources>
     <string name="logs">Logs</string>
     <string name="logging_disabled_alert">Logging feature is currently disabled. You can enable this in the settings.</string>
-    <string name="not_forwarded">Message not forwarded</string>
-    <string name="unknown_account_id">Message forwarded using unknown account of ID %s</string>
-    <string name="known_account_id">Message forwarded using account "%s".</string>
     <string name="success">Success</string>
     <string name="failure">Failure</string>
     <string name="hide_successful_sends">Hide successful sends</string>
+    <string name="message_sending_failed">Message not yet sent, still in outbox.</string>
+    <string name="message_sent">Message sent successfully.</string>
+    <string name="message_dropped">Message not sent due to user rules.</string>
+    <string name="unrecognised_message_code">Message not sent due to unrecognised message type.</string>
+    <string name="no_suitable_forwarder">Message not sent because suitable forwarder could not be found.</string>
+    <string name="cannot_load_matrix_client">Message not sent because loading Matrix client failed.</string>
+    <string name="cannot_create_room">Message not sent because room for that sender could not be created.</string>
+    <string name="cannot_create_child_room">Message not sent because Matrix client cannot create child room.</string>
 </resources>
