--- a/app/src/main/res/values/commands.xml
+++ b/app/src/main/res/values/commands.xml
@@ -5,7 +5,7 @@
     <string name="kick_error">Error: Cannot get all users to kick.</string>
     <string name="cannot_delete_management_room">You cannot delete management rooms. You can delete this by removing this account from Remotrix app.</string>
     <string name="error_cannot_kick_user">Error: Cannot kick user %s.</string>
-    <string name="ready_to_accept_commands">%s is ready to accept commands.</string>
+    <string name="ready_to_accept_commands">%s is ready to accept commands. (You can disable this message in the settings)</string>
     <string name="startup_2">Any non-command messages sent into this room will be sent to %s.</string>
     <string name="startup_1">This room has been created by %s on device %s.</string>
 </resources>
