--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -12,4 +12,5 @@
     <string name="debug_settings">Debug Settings</string>
     <string name="receive_message_on_service_check">Receive message on service check</string>
     <string name="receive_message_on_service_check_desc">If set, forwarders will send a message whenever the app checks if the service is running.</string>
+    <string name="debug_menu">Debug Menu</string>
 </resources>
