--- a/app/src/main/res/values/commands.xml
+++ b/app/src/main/res/values/commands.xml
@@ -16,4 +16,5 @@
     <string name="error_sending_in_management_room">Error: You cannot send messages in management room.</string>
     <string name="error_sms_receiver_not_specified">Error: SMS receiver has not been specified.</string>
     <string name="error_cannot_create_messaging_room">Error: Messaging room cannot be created!</string>
+    <string name="error_invalid_phone_number">Error: Invalid phone number.</string>
 </resources>
