--- a/app/src/main/res/values/commands.xml
+++ b/app/src/main/res/values/commands.xml
@@ -17,4 +17,5 @@
     <string name="error_sms_receiver_not_specified">Error: SMS receiver has not been specified.</string>
     <string name="error_cannot_create_messaging_room">Error: Messaging room cannot be created!</string>
     <string name="error_invalid_phone_number">Error: Invalid phone number.</string>
+    <string name="room_already_exists">Room for that phone number already exists; Inviting you there now.</string>
 </resources>
