--- a/app/src/main/res/values/commands.xml
+++ b/app/src/main/res/values/commands.xml
@@ -18,4 +18,5 @@
     <string name="error_cannot_create_messaging_room">Error: Messaging room cannot be created!</string>
     <string name="error_invalid_phone_number">Error: Invalid phone number.</string>
     <string name="room_already_exists">Room for that phone number already exists; Inviting you there now.</string>
+    <string name="error_encryption_not_enabled">Error: This chatroom does not have encryption enabled.</string>
 </resources>
