Service auto restarts on changing certain variables related to it

--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -18,5 +18,5 @@
     <string name="logging">Logging</string>
     <string name="commands">Commands</string>
     <string name="allow_anyone_to_use_commands">Allow Anyone To Use Commands</string>
-    <string name="allow_anyone_to_use_commands_desc">If this option is enabled, anyone inside the management/messaging room can use commands. Otherwise, only the manager can use commands.</string>
+    <string name="allow_anyone_to_use_commands_desc">If this option is enabled, anyone inside the management/messaging room can use commands. Otherwise, only the manager can use commands. Changing this requires a service restart.</string>
 </resources>
